tests/baselines/reference/parserArrowFunctionExpression5.errors.txt
parserArrowFunctionExpression5.ts(1,2): error TS2304: Cannot find name 'bar'.
parserArrowFunctionExpression5.ts(1,6): error TS2304: Cannot find name 'x'.


==== parserArrowFunctionExpression5.ts (2 errors) ====
    (bar(x,
     ~~~
!!! error TS2304: Cannot find name 'bar'.
         ~
!!! error TS2304: Cannot find name 'x'.
        () => {},
        () => {}
      )
    )
    